# paper2txt

./: README.md  maintainernotes.md  pyproject.toml
src/paper2txt/: executable.py
tests/: test_command.py
