[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "paper2txt"
authors = ["Reto Stamm"]
description = "Simple tool to extract text from scientific PDFs"
readme = "README.md"
version = "0.0.1"
keywords = ["example"]
license = "GPL-3"
classifiers = [ "Programming Language :: Python :: 3", ]
homepage="https://github.com/retospect/paper2txt"

[tool.poetry.scripts]
# fafa: cmd; wibble: package; wobble: .py; warble: method
paper2txt = "paper2txt.executable:paper2txt"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/wibble/__init__.py" = ["{version}"]

